<resources>
    <string name="app_name">mobile-tracker</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="login_subtitle">Sign in to continue</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="toggle_to_sign_up">Don\'t have an account? Sign up</string>
    <string name="toggle_to_sign_in">Already have an account? Sign in</string>
</resources>
